# rotasim

./: .gitignore  CLAUDE.md  LICENSE  README.md  data_cleaning.py  data_cleaning_0923.py  plot_results.py  profile_rotaABM.py  pyproject.toml  requirements.txt  rotaABM.py  rotaABM_0923_working.py  rotaABM_IDM_VACCINE_age_experiment.py  rotaABM_IDM_VACCINE_age_experiment_ck.py  rotaABM_IDM_VACCINE_age_experiment_profile.py  scratch.py  scratch2.py  simple.py  test_calibration.py  test_events_alt.json  test_events_default.json  test_immunity_decay.py  test_performance.json  test_performance.py  test_rotaABM.py
.claude/: settings.local.json
.github/workflows/: tests.yaml
archive/: rotaABM_IDM_VACCINE_age_experiment_ck.py
calibration/: CalibrationDatafile_prevax 3.xlsx  InitialCleaning_AK3_CK.R  InitialCleaning_AK4_CK.R  __init__.py  calibration.py  calibration_data_cleaning.py  process_incidence.py
data_analysis/: compare_results.py  compute_vaccine_efficacy.py  debug_model.py  get_percentage.py  plot_diversity_pie_chart.py  plot_genotype_line.py  plot_results.py  rotaABM_GF_plots.py
debug1/: rotaABM_0821.py
debug2/: rotaABM 1.py
examples/: analyzer_usage.py  rotasim_demo.ipynb
planning/: PHASE_1_IMPLEMENTATION_TODO.md  rotasim_v2_architecture_plan.md
rotasim/: __init__.py  analyzers.py  arrays.py  immunity.py  interventions.py  reassortment.py  rotasim.py  rotasim_genetics.py  rotavirus.py  utils.py  utils_old.py  version.py
scripts/: get_age_distribution_severe.py  get_g1p8_propotion.py  get_infection_rate.py  get_number_of_strains.py
tests/: simple.py  test_additional_analyzers.py  test_analyzer_output.py  test_analyzers.py  test_calibration.py  test_events_alt.json  test_events_default.json  test_immunity_connector.py  test_integration.py  test_performance.json  test_performance.py  test_reassortment.py  test_reassortment_simple.py  test_rotaABM.py  test_rotasim.py  test_rotasim_class.py  test_simple_example.py  test_time_units.py  test_utils.py  test_v2_rotavirus.py  test_vaccination.py  update_performance.py
v1_legacy/: analyzers.py  interventions.py  rotasim.py
