[project]
name = "rotasim"
description = "Rotavirus Simulator"
keywords = ["agent-based model", "simulation", "rotavirus"]
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10"
authors = [
  { name = "Suvanthee Gunasekera" },
  { name = "Alicia Kraay" },
  { name = "Ryan Hull" },
  { name = "Cliff Kerr" },
  { name = "Jillian Gauld" },
]
license = {file = "LICENSE"}
dependencies = [
    "sciris",
    "numpy",
    "matplotlib",
    "pandas",
]


[tool.setuptools]
packages = ["rotasim"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "rotasim.version.__version__"}