[project]
name = "rotasim"
description = "Rotavirus Simulator"
keywords = ["agent-based model", "simulation", "rotavirus"]
authors = [
  { name = "Suvanthee Gunasekera" },
  { name = "Alicia Kraay" },
  { name = "Ryan Hull" },
  { name = "Cliff Kerr" },
  { name = "Jillian Gauld" },
]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "sciris",
    "numpy",
    "numba>=0.61.0",
    "matplotlib",
    "pandas",
    "starsim>=3.0.2",
]

[dependency-groups]
dev = [
    "jupyter",
    "ipykernel", 
    "seaborn",           # Enhanced plotting for notebooks
    "pytest",            # Testing framework
    "pytest-cov",        # Coverage reports
    "black",             # Code formatting
    "ruff",              # Linting
    "pre-commit",        # Git hooks
    "pytest",            # Testing framework
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rotasim*"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "rotasim.version.__version__"}

[tool.uv.sources]
starsim = { path = "../starsim", editable = true }